k8s/media-services/listenarr/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: listenarr
  namespace: media-services
  labels:
    app: listenarr
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: http
    protocol: TCP
  selector:
    app: listenarr
